# sparkback

./: CLAUDE.md  LICENSE.txt  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/workflows/: python.yml
examples/: htop_demo.py
sparkback/: __init__.py  spark.py
tests/: spark_test.py
