[tool.poetry]
name = "Sparkback"
version = "0.0.2"
description = "Sparklines Library"
authors = ["Matt Michie <mmichie@gmail.com>"]
homepage = "https://github.com/mmichie/sparkback"

[tool.poetry.scripts]
spark = 'sparkback.spark:main'


[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

